Style: Added section#features style

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -299,6 +299,28 @@ section#features {
 	padding: @vertical_spacing calc(~'(100% - 1200px) / 2');
 	background-color: @color_features;
 	color: @color_features_text;
+	text-align:  center;
+}
+
+section#features h2 {
+	color: @color_ac_text;
+}
+
+section#features ul {
+	margin: 0px;
+	padding: 0px;
+	list-style-type: none;
+}
+
+section#features ul li {
+	display: inline-block;
+	vertical-align: top;
+	width: 25%;
+}
+
+section#features ul li p {
+	padding-left: 10px;
+	padding-right: 10px;
 }
 
 /**
