--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -153,6 +153,7 @@ section#packages div.package a.buy svg {
 	margin-top: -0.3em;
 }
 
+section#package_features.basic a.buy:hover, 
 section#package_features a.buy:hover,
 section#package_details.basic a.buy:hover,
 section#packages div.package.basic a.buy:hover {
@@ -163,16 +164,19 @@ section#package_features a.buy:hover {
 	color: @color_ac_text;
 }
 
+section#package_features.renewable a.buy:hover,
 section#package_details.renewable a.buy:hover,
 section#packages div.package.renewable a.buy:hover {
 	background-color: darken(@color_ac_green, 10%);
 }
 
+section#package_features.business a.buy:hover,
 section#package_details.business a.buy:hover,
 section#packages div.package.business a.buy:hover {
 	background-color: darken(@color_ac_red, 10%);
 }
 
+section#package_features.industry a.buy:hover,
 section#package_details.industry a.buy:hover,
 section#packages div.package.industry a.buy:hover {
 	background-color: darken(@color_ac_orange, 10%);
