--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -250,11 +250,15 @@ section#package_details.industry article {
  */
 section.eguage_details,
 section#egauge {
-	padding: @vertical_spacing calc(~'(100% - 1200px) / 2');
+	padding: @vertical_spacing calc(~'(100% - 1200px) / 2');	
+}
+
+section.eguage_details {
+	text-align: center;
 }
 
 section#package_features article,
-section.eguage_details article,
+section.eguage_details article.ethernet,
 section#egauge article {
 	display: block;
 	padding-right: 50%;
@@ -264,17 +268,59 @@ section#egauge article {
 	background-size: auto 100%;
 }
 
+section.eguage_details article,
 section#package_features article {
 	text-align: left;
-	padding-left: @vertical_spacing;
-	padding-right: @vertical_spacing;
-	background-image: none;
-	color: @color_ac_blue;
+	background-image: none;	
 }
 
-section.eguage_details article {
-	padding-bottom: 100px;
+section#package_features article {
+	padding-right: 0%;
 }
+
+article.ethernet {
+	padding-bottom: 100px;
+	margin-bottom: 50px;
+}
+
+article.specification ,
+article.eguage_features {
+	display: inline-block;
+	vertical-align: top;
+	margin-left: 5px;
+	margin-right: 5px;
+	width: 48%;
+	min-height: 800px;
+	border: 1px solid lighten(@color_text,40%);
+}
+
+article.specification h2,
+article.eguage_features h2 {
+	text-align: center;
+	margin: 0px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	color: @color_ac_text ;
+	background-color: @color_header_title;
+}
+
+article.specification li {
+	padding-bottom: 10px;
+}
+
+article.eguage_features table {
+	padding-top: 10px;
+	padding-bottom: 10px;
+	padding-left: 20px;
+	padding-right: 20px;
+	width: 100%;
+}
+
+article.eguage_features table tr td {
+	width: 50%;
+}
+
+
 
 section#egauge a.button_more {
 	display: inline-block;
