Style: Added color_header_title var

--- a/site/styles/main.less
+++ b/site/styles/main.less
@@ -17,6 +17,7 @@
 @color_features_text: white;
 @color_header: #1e477a;
 @color_special: #5cc3d9;
+@color_header_title: #f0c30e;
 @color_text: #7f8c8d;
 
 @vertical_spacing: 50px;
