--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -248,17 +248,17 @@ section#package_details.industry article {
 /**
  * Egauge article
  */
-section.eguage_details,
+section#eguage_details,
 section#egauge {
 	padding: @vertical_spacing calc(~'(100% - 1200px) / 2');	
 }
 
-section.eguage_details {
+section#eguage_details {
 	text-align: center;
 }
 
 section#package_features article,
-section.eguage_details article.ethernet,
+section#eguage_details article.ethernet,
 section#egauge article {
 	display: block;
 	padding-right: 50%;
@@ -268,7 +268,7 @@ section#egauge article {
 	background-size: auto 100%;
 }
 
-section.eguage_details article,
+section#eguage_details article,
 section#package_features article {
 	text-align: left;
 	background-image: none;	
@@ -278,13 +278,13 @@ section#package_features article {
 	padding-right: 0%;
 }
 
-article.ethernet {
+section#eguage_details article.ethernet {
 	padding-bottom: 100px;
 	margin-bottom: 50px;
 }
 
-article.specification ,
-article.eguage_features {
+section#eguage_details article.specification ,
+section#eguage_details article.eguage_features {
 	display: inline-block;
 	vertical-align: top;
 	margin-left: 5px;
@@ -294,8 +294,8 @@ article.eguage_features {
 	border: 1px solid lighten(@color_text,40%);
 }
 
-article.specification h2,
-article.eguage_features h2 {
+section#eguage_details article.specification h2,
+section#eguage_details article.eguage_features h2 {
 	text-align: center;
 	margin: 0px;
 	padding-top: 10px;
@@ -304,11 +304,11 @@ article.eguage_features h2 {
 	background-color: @color_header_title;
 }
 
-article.specification li {
+section#eguage_details article.specification li {
 	padding-bottom: 10px;
 }
 
-article.eguage_features table {
+section#eguage_details article.eguage_features table {
 	padding-top: 10px;
 	padding-bottom: 10px;
 	padding-left: 20px;
@@ -316,7 +316,7 @@ article.eguage_features table {
 	width: 100%;
 }
 
-article.eguage_features table tr td {
+section#eguage_details article.eguage_features table tr td {
 	width: 50%;
 }
 
