--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -377,7 +377,8 @@ section#package_features {
 	color: @color_text;
 }
 
-section#features h2 {
+section#features h2,
+section#features h4 {
 	color: @color_ac_text;
 }
 
