--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -399,6 +399,20 @@ section#package_features ul li {
 	width: 33.3%;
 }
 
+section#features ul li svg {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	fill: white;
+	width: 70px;
+	height: 70px;
+}
+
+section#features ul li h4 {
+	color: @color_ac_text;
+	min-height: 100px;
+}
+
 section#package_features ul li p,
 section#features ul li p {
 	padding-left: 10px;
