Style: Updated section#package_features article

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -296,6 +296,9 @@ section#package_features article {
 }
 
 section#package_features article {
+	margin-left: auto;
+	margin-right: auto;
+	width: 960px;
 	padding-right: 0%;
 }
 
