Style: Updated section#package_features a.buy

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -115,6 +115,8 @@ section#packages div.package h2 {
 	padding-left: 20px;
 }
 
+section#title_documentation h2,
+section#title_video h2,
 section#about_egauge h2 {
 	padding-left: 40px;
 }
@@ -149,6 +151,7 @@ section#packages div.package a.buy {
 
 section#package_features a.buy {
 	border: 1px solid @color_ac_blue;
+	margin-left: 0px;
 }
 
 
