Template:Updated action call of module:downloads

--- a/site/templates/documentation.xml
+++ b/site/templates/documentation.xml
@@ -21,7 +21,7 @@
 			<section id="downloads">
 				<cms:module
 					name="downloads"
-					action="show"
+					action="show_list"
 					template="parts/downloads.xml"
 					/>
 			</section>
