Style: Added section#downloads rules

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -388,6 +388,34 @@ section#video iframe {
 	margin-left: 20px;
 }
 
+/*
+  Download links
+*/
+
+section#downloads a {
+	display: inline-block;
+	vertical-align: top;
+	margin-left: 5px;
+	margin-right: 5px;
+	margin-bottom: 10px;
+	text-decoration: none;
+	border: 1px solid lighten(@color_text,40%);
+	width: calc(30% - 2px);
+}
+
+section#downloads a img {
+	display: block;
+	margin-top: 1em;
+	margin-left: auto;
+	margin-right: auto;
+	width: 70px;
+	height: 70px;
+}
+
+section#downloads a p {
+	color: @color_text;
+}
+
 /**
  * Features
  */
