Style: Added hover state to section#downloads a

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -401,6 +401,11 @@ section#downloads a {
 	text-decoration: none;
 	border: 1px solid lighten(@color_text,40%);
 	width: calc(30% - 2px);
+	transition: all 0.3s;
+}
+
+section#downloads a:hover {
+	box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.4);
 }
 
 section#downloads a img {
