--- a/site/templates/renewable.xml
+++ b/site/templates/renewable.xml
@@ -4,7 +4,7 @@
 	<cms:var name="_DOCTYPE"/>
 	<html lang="$language" cms:eval="lang">
 		<head>
-			<title><cms:text constant="site_title"/><cms:raw text=" - "/><cms:text constant="basic_page_label"/></title>
+			<title><cms:text constant="site_title"/><cms:raw text=" - "/><cms:text constant="renewable_page_label"/></title>
 			<link href='https://fonts.googleapis.com/css?family=Ubuntu|Ultra' rel='stylesheet' type='text/css'/>
 			<cms:collection include="page_control"/>
 			<cms:module name="head_tag" action="print_tag"/>
