--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -37,6 +37,7 @@ section#packages div.package {
 	transition-delay: 0s, 0.5s;
 }
 
+section#about,
 section#title_documentation,
 section#title_video,
 section#about_egauge,
@@ -54,6 +55,7 @@ section#package_details {
 	min-height: 500px;
 }
 
+section#about,
 section#title_documentation,
 section#title_video,
 section#about_egauge {
@@ -106,6 +108,12 @@ section#title_documentation {
 	background-color: @color_ac_blue;
 }
 
+section#about {
+	background-image: url(../images/blog-background.jpg);
+	background-color: @color_ac_blue;
+}
+
+section#about h2,
 section#title_documentation h2,
 section#title_video h2,
 section#about_egauge h2,
@@ -115,6 +123,7 @@ section#packages div.package h2 {
 	padding-left: 20px;
 }
 
+section#about h2,
 section#title_documentation h2,
 section#title_video h2,
 section#about_egauge h2 {
@@ -268,6 +277,7 @@ section#package_details.industry article {
 /**
  * Egauge article
  */
+section#about_content, 
 section#downloads,
 section#videos,
 section#eguage_details,
@@ -292,12 +302,14 @@ section#egauge article {
 	background-size: auto 100%;
 }
 
+section#about_content article,
 section#eguage_details article,
 section#package_features article {
 	text-align: left;
 	background-image: none;
 }
 
+section#about_content article,
 section#package_features article {
 	margin-left: auto;
 	margin-right: auto;
@@ -329,6 +341,10 @@ section#eguage_details article.eguage_features h2 {
 	padding-bottom: 10px;
 	color: @color_ac_text ;
 	background-color: @color_header_title;
+}
+
+section#about_content article h2 {
+	margin-top: 0px;
 }
 
 section#eguage_details article.specification li {
