Style: Updated section#packages_features unordered list

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -481,22 +481,22 @@ section#features h4 {
 	color: @color_ac_text;
 }
 
-section#package_features ul,
-section#features ul {
+section#package_features > ul,
+section#features > ul {
 	margin: 0px;
 	padding: 0px;
 	margin-top: 60px;
 	list-style-type: none;
 }
 
-section#package_features ul li,
+section#package_features > ul > li,
 section#features ul li {
 	display: inline-block;
 	vertical-align: top;
 	width: 25%;
 }
 
-section#package_features ul li {
+section#package_features > ul > li {
 	width: 33.3%;
 }
 
