Style: Updated section#package_features a.buy button to each class

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -163,6 +163,20 @@ section#package_features a.buy {
 	margin-left: 0px;
 }
 
+section#package_features.renewable a.buy {
+	color: @color_ac_green;
+	border: 1px solid @color_ac_green;
+}
+
+section#package_features.business a.buy {
+	color: @color_ac_red;
+	border: 1px solid @color_ac_red;
+}
+
+section#package_features.industry a.buy {
+	color: @color_ac_orange;
+	border: 1px solid @color_ac_orange;
+}
 
 section#package_details a.buy:hover,
 section#packages div.package a.buy:hover {
