Style: Added section#package_features ul li h4

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -528,6 +528,10 @@ section#package_features ul li svg {
 	fill: @color_header;
 }
 
+section#package_features ul li h4 {
+	min-height: 50px;
+}
+
 section#features ul li h4 {
 	color: @color_ac_text;
 	min-height: 100px;
