--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -575,3 +575,61 @@ div#checkout_container h4,
 div#checkout_container h5 {
 	font-weight: 400;
 }
+
+div#input_details {
+	border-radius: 0px 0px 0px 0px;
+	box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
+}
+
+div#shipping_information h1 {
+	padding: 14px;
+	border-radius: 0px 0px 0px 0px;
+	background-color: @color_ac_blue;
+}
+
+div#input_details label span {
+	text-align: left;
+	color: @color_text;
+}
+
+div#input_details label small {
+	color: @color_text;
+}
+
+div#input_details label input[type=email], 
+div#input_details label input[name=phone],
+div#input_details label input[name=street], 
+div#input_details label input[name=street2],
+div#input_details label input[name=zip],
+div#input_details label input {
+	padding: 14px;
+	width: 280px;
+}
+
+div#input_details label select {
+	padding: 14px;
+	width: 305px;
+}
+
+div#input_details label select:focus, 
+div#input_details label input:focus {
+	border: 1px solid @color_ac_blue;
+}
+
+div#input_details div.checkout_controls button {
+	border-radius: 0px;
+	border: none;
+	background-color: @color_ac_blue;
+	background-image: none;
+	box-shadow: 0px 0px 0px 0px;
+	text-shadow: none ;
+	cursor: pointer;
+	transition: all 0.3s;
+}
+
+div#input_details div.checkout_controls button:hover {
+	background-color: lighten(@color_ac_blue,10%);
+}
+
+
+
