Style: updated div#input_details input border color

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -622,7 +622,7 @@ div#input_details label select {
 
 div#input_details label select:focus, 
 div#input_details label input:focus {
-	border: 1px solid @color_header;
+	border: 1px solid @color_features;
 }
 
 div#input_details div.checkout_controls button {
