--- a/site/styles/footer.less
+++ b/site/styles/footer.less
@@ -24,11 +24,14 @@ footer div.menu {
 	background-image: url(../images/footer.jpg);
 	background-position: center bottom;
 	background-repeat: no-repeat;
+	text-align: right;
 }
 
 footer div.menu img {
 	width: 50%;
 	margin-bottom: @small_vertical_spacing;
+	margin-left: 25%;
+	margin-right: 25%;
 }
 
 footer div.menu a {
@@ -61,6 +64,12 @@ footer a.phone svg {
 /**
  * Lists
  */
+
+footer div.menu nav#plans {
+	text-align: center;
+	margin-bottom: 30px;
+}
+
 footer div.menu ul {
 	display: inline-block;
 
@@ -82,6 +91,7 @@ nav#policy {
 	display: block;
 	margin-top: @small_vertical_spacing;
 	margin-bottom: @small_vertical_spacing;
+	text-align: center;
 }
 
 /**
