Style: Updated section#video

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -595,14 +595,19 @@ section#package_features article.business_system ul li  p {
 section#videos div.video_wrap {
 	display: inline-block;
 	vertical-align: top;
-	margin-left: 10px;
-	margin-right: 10px;
+	margin-left: 15px;
+	margin-right: 15px;
 	margin-bottom: 10px;
 }
 
 section#videos div.video_wrap h4 {
 	display: block;
 	text-align: center;
+}
+
+section#videos div.video_wrap iframe {
+	border: 1px solid @color_text;
+	box-shadow: 0px 1px 1px @color_text;
 }
 
 /**
