--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -656,12 +656,10 @@ div#input_details label input[name=street],
 div#input_details label input[name=street2],
 div#input_details label input[name=zip],
 div#input_details label input {
-	padding: 14px;
 	width: 280px;
 }
 
 div#input_details label select {
-	padding: 14px;
 	width: 308px;
 }
 
@@ -676,6 +674,7 @@ div#input_details div.checkout_controls button {
 	background-color: @color_header;
 	background-image: none;
 	box-shadow: 0px 0px 0px 0px;
+	border-radius: @button_border_radius;
 	text-shadow: none ;
 	cursor: pointer;
 	transition: all 0.3s;
