Content style: Fixed coding style issues.

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -291,10 +291,10 @@ section#package_details.industry article {
 /**
  * Egauge article
  */
-section#return, 
+section#return,
 section#shipping,
-section#warranty, 
-section#about_content, 
+section#warranty,
+section#about_content,
 section#downloads,
 section#videos,
 section#eguage_details,
@@ -328,8 +328,8 @@ section#package_features article {
 
 
 section#return article,
-section#shipping article, 
-section#warranty article, 
+section#shipping article,
+section#warranty article,
 section#about_content article,
 section#package_features article {
 	margin-left: auto;
@@ -339,17 +339,17 @@ section#package_features article {
 }
 
 section#return article a,
-section#shipping article a, 
+section#shipping article a,
 section#warranty article a {
 	color: @color_header;
 	transition: all 0.3s;
 }
 
 section#return article a:hover,
-section#shipping article a:hover, 
+section#shipping article a:hover,
 section#warranty article a:hover {
 	color: darken(@color_header,10%);
-} 
+}
 
 section#eguage_details article.ethernet {
 	padding-bottom: 100px;
@@ -438,10 +438,9 @@ section#video iframe {
 	margin-left: 20px;
 }
 
-/*
-  Download links
-*/
-
+/**
+ * Downloads
+ */
 section#downloads a {
 	display: inline-block;
 	vertical-align: top;
@@ -588,10 +587,9 @@ section#package_features article.business_system ul li  p {
 	margin: 0px;
 }
 
-/*
-  Video page 
-*/
-
+/**
+ * Videos
+ */
 section#videos div.video_wrap {
 	display: inline-block;
 	vertical-align: top;
@@ -650,9 +648,9 @@ div#input_details label small {
 	color: @color_text;
 }
 
-div#input_details label input[type=email], 
+div#input_details label input[type=email],
 div#input_details label input[name=phone],
-div#input_details label input[name=street], 
+div#input_details label input[name=street],
 div#input_details label input[name=street2],
 div#input_details label input[name=zip],
 div#input_details label input {
@@ -665,7 +663,7 @@ div#input_details label select {
 	width: 308px;
 }
 
-div#input_details label select:focus, 
+div#input_details label select:focus,
 div#input_details label input:focus {
 	border: 1px solid @color_features;
 }
@@ -684,6 +682,3 @@ div#input_details div.checkout_controls button {
 div#input_details div.checkout_controls button:hover {
 	background-color: lighten(@color_ac_blue,10%);
 }
-
-
-
