Content style: Increase width for checkout steps.

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -619,6 +619,10 @@ div#checkout_container h5 {
 	font-weight: 400;
 }
 
+div#checkout_steps.input_details {
+	width: 700px;
+}
+
 div#checkout_steps a:before,
 div#checkout_steps a {
 	color: @color_text;
@@ -680,5 +684,6 @@ div#input_details div.checkout_controls button {
 }
 
 div#input_details div.checkout_controls button:hover {
-	background-color: lighten(@color_ac_blue,10%);
+	background-color: lighten(@color_ac_blue, 10%);
 }
+
