--- a/site/styles/main_mobile.less
+++ b/site/styles/main_mobile.less
@@ -25,6 +25,7 @@
 @button_border_radius: 5px;
 @package_content_width: 550px;
 
+@import "header_mobile.less";
 @import "content_mobile.less";
 @import "footer_mobile.less";
 
