--- a/site/styles/header.less
+++ b/site/styles/header.less
@@ -43,6 +43,10 @@ nav#main > ul > li {
 	position: relative;
 }
 
+nav#main > ul > li:last-of-type {
+	margin-left: 2em;
+}
+
 nav#main > ul > li > a {
 	display: block;
 	padding-left: 15px;
@@ -63,20 +67,7 @@ nav#main > ul > li > a:hover {
 }
 
 nav#main > ul > li > a.login {
-	position: relative;
-	margin-left: 2em;
-
 	color: @color_special;
-}
-
-nav#main > ul > li > a.login:before {
-	display: block;
-	position: absolute;
-	width: 100%;
-	height: 2.5em;
-	top: -100%;
-	left: 0;
-	content: '';
 }
 
 nav#main > ul > li > a.login:hover {
