Style: updated section#packages margin-top value

--- a/site/styles/content_mobile.less
+++ b/site/styles/content_mobile.less
@@ -11,6 +11,7 @@
  */
 section#packages {
 	position: relative;
+	margin-top: -17px;
 	min-height: 600px;
 	text-align: center;	
 }
@@ -43,6 +44,7 @@ section#title_video,
 section#about_egauge,
 section#package_details {
 	display: block;
+	margin-top: -17px;
 	text-align: center;
 	position: relative;
 	padding-top: 240px;
