--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -637,7 +637,7 @@ div#input_details {
 	box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
 }
 
-div#shipping_information h1 {
+div#input_details h1 {
 	padding: 14px;
 	border-radius: 0px 0px 0px 0px;
 	background-color: @color_header;
