--- a/site/styles/content_mobile.less
+++ b/site/styles/content_mobile.less
@@ -592,3 +592,88 @@ section#downloads a img {
 section#downloads a p {
 	color: @color_text;
 }
+
+/**
+ * Checkout
+ */
+div#checkout_container h1,
+div#checkout_container h2,
+div#checkout_container h3,
+div#checkout_container h4,
+div#checkout_container h5 {
+	font-weight: 400;
+}
+
+div#checkout_steps.input_details {
+	display: block;
+	
+}
+
+div#checkout_steps a:before,
+div#checkout_steps a {
+	color: @color_text;
+}
+
+div#checkout_steps a.active:before {
+	background-color: @color_header;
+}
+
+div#input_details {
+	border-radius: 0px 0px 0px 0px;
+	box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
+}
+
+div#input_details div.existing_account.visible, 
+div#input_details div.new_account.visible, 
+div#input_details div.guest_checkout.visible {
+	max-height: 400px;
+}
+
+div#input_details h1 {
+	padding: 14px;
+	border-radius: 0px 0px 0px 0px;
+	background-color: @color_header;
+}
+
+div#input_details label span {
+	text-align: left;
+	color: @color_text;
+}
+
+div#input_details label small {
+	color: @color_text;
+}
+
+div#input_details label input[type=email],
+div#input_details label input[name=phone],
+div#input_details label input[name=street],
+div#input_details label input[name=street2],
+div#input_details label input[name=zip],
+div#input_details label input {
+	width: 280px;
+}
+
+div#input_details label select {
+	width: 308px;
+}
+
+div#input_details label select:focus,
+div#input_details label input:focus {
+	border: 1px solid @color_features;
+}
+
+div#input_details div.checkout_controls button {
+	border-radius: 0px;
+	border: none;
+	background-color: @color_header;
+	background-image: none;
+	box-shadow: 0px 0px 0px 0px;
+	border-radius: @button_border_radius;
+	text-shadow: none ;
+	cursor: pointer;
+	transition: all 0.3s;
+}
+
+div#input_details div.checkout_controls button:hover {
+	background-color: lighten(@color_ac_blue, 10%);
+}
