--- a/site/templates/basic.xml
+++ b/site/templates/basic.xml
@@ -4,7 +4,11 @@
 	<cms:var name="_DOCTYPE"/>
 	<html lang="$language" cms:eval="lang">
 		<head>
-			<title><cms:text constant="site_title"/><cms:raw text=" - "/><cms:text constant="basic_page_label"/></title>
+			<title>
+				<cms:text constant="site_title"/>
+				<cms:raw text=" - "/>
+				<cms:text constant="basic_page_label"/>
+			</title>
 			<link href='//fonts.googleapis.com/css?family=Ubuntu|Ultra' rel='stylesheet' type='text/css'/>
 			<cms:collection include="page_control"/>
 			<cms:module name="head_tag" action="print_tag"/>
@@ -66,7 +70,6 @@
 
 			<!-- Features -->
 			<cms:template file="parts/features.xml"/>
-
 
 			<!-- Footer -->
 			<cms:template file="parts/footer.xml"/>
