Added extra pages to checkout.

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -741,3 +741,33 @@ section#contact form button:hover {
 	background-color: @color_ac_blue;
 	color: @color_ac_text;
 }
+
+/**
+ * Extra checkout styles
+ */
+div#related_products {
+	padding: 10px;
+}
+
+div#related_products div.container {
+	min-height: 300px;
+	overflow-y: auto;
+}
+
+div#related_products div.related_item {
+	display: inline-block;
+	white-space: nowrap;
+}
+
+div#related_products div.related_item sprite {
+}
+
+div#related_products div.related_item span {
+	display: inline-block;
+	vertical-align: middle;
+	margin-right: 10px;
+}
+
+div#related_products div.related_item div.item_controls {
+	display: inline-block;
+}
