--- a/site/templates/checkout.xml
+++ b/site/templates/checkout.xml
@@ -11,7 +11,9 @@
 			</title>
 
 			<link href='//fonts.googleapis.com/css?family=Ubuntu|Ultra' rel='stylesheet' type='text/css'/>
+			<cms:script src="_BASEURL.'/site/scripts/checkout.js'" cms:eval="src"/>
 			<cms:module name="shop" action="include_scripts"/>
+			<cms:module name="shop" action="include_cart_scripts"/>
 			<cms:module name="head_tag" action="print_tag"/>
 		</head>
 
@@ -39,6 +41,8 @@
 				name="shop"
 				action="show_checkout_form"
 				include_shipping="1"
+				payment_method="paypal_express"
+				template="parts/buyer_information.xml"
 				/>
 
 			<!-- Footer -->
