Style: Updated div.related_products

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -686,55 +686,6 @@ div#input_details div.checkout_controls button:hover {
 	background-color: lighten(@color_ac_blue, 10%);
 }
 
-div#current_selection  label input[type="checkbox"] {
-	display: none;
-}
-
-div#current_selection  label input[type="checkbox"]:checked ~ span:after {
-	transform: scale(1);
-}
-
-div#current_selection label {
-	margin-top: 0px;
-	margin-bottom: 0px;
-}
-
-div#current_selection label  span{
-	position: relative;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	width: 100px
-}
-
-div#current_selection label span:before {
-	content: "";
-	position: absolute;
-	top: 50%;
-	margin-top: -12.5px;
-	left: 100%;
-	width: 25px;
-	height: 25px; 
-	border: 1px solid @color_ac_blue;
-}
-
-div#current_selection label span:after {
-	content: "";
-	position: absolute;
-	top: 50%;
-	margin-top: -12.5px;
-	left: 100%;
-	width: 25px;
-	height: 25px; 
-	
-	background-image: url(../images/check_mark_white.svg);
-	background-repeat: no-repeat;
-	background-position: center center;
-	background-size: 20px 20px;
-
-	transform: scale(0);
-	transition: all 0.3s;
-}
-
 
 /**
  * Contact form
@@ -795,8 +746,58 @@ section#contact form button:hover {
 /**
  * Extra checkout styles
  */
+
+ div#current_selection  label input[type="checkbox"] {
+ 	display: none;
+ }
+
+ div#current_selection  label input[type="checkbox"]:checked ~ span:after {
+ 	transform: scale(1);
+ }
+
+ div#current_selection label {
+ 	margin-top: 0px;
+ 	margin-bottom: 0px;
+ }
+
+ div#current_selection label  span{
+ 	position: relative;
+ 	padding-top: 10px;
+ 	padding-bottom: 10px;
+ 	width: 100px
+ }
+
+ div#current_selection label span:before {
+ 	content: "";
+ 	position: absolute;
+ 	top: 50%;
+ 	margin-top: -12.5px;
+ 	left: 100%;
+ 	width: 25px;
+ 	height: 25px; 
+ 	border: 1px solid @color_ac_blue;
+ }
+
+ div#current_selection label span:after {
+ 	content: "";
+ 	position: absolute;
+ 	top: 50%;
+ 	margin-top: -12.5px;
+ 	left: 100%;
+ 	width: 25px;
+ 	height: 25px; 
+ 	
+ 	background-image: url(../images/check_mark_white.svg);
+ 	background-repeat: no-repeat;
+ 	background-position: center center;
+ 	background-size: 20px 20px;
+
+ 	transform: scale(0);
+ 	transition: all 0.3s;
+ }
+
 div#related_products {
-	padding: 10px;
+	padding: 0px;
 }
 
 div#related_products div.container {
@@ -805,19 +806,40 @@ div#related_products div.container {
 }
 
 div#related_products div.related_item {
-	display: inline-block;
+	display: block;
+	border-top: 1px solid #f0f0f0;
+	border-bottom: 1px solid #f0f0f0;
 	white-space: nowrap;
 }
 
-div#related_products div.related_item sprite {
+div#related_products div.related_item figure {
+	margin: 0px;
+	display: inline-block;
+	vertical-align: middle;
+	width: 100px;
+}
+div#related_products div.related_item figure img {
+	display: block;
 }
 
 div#related_products div.related_item span {
 	display: inline-block;
 	vertical-align: middle;
-	margin-right: 10px;
+	text-align: center;
+	white-space: normal;
+	width: 20%;
 }
 
 div#related_products div.related_item div.item_controls {
 	display: inline-block;
+	vertical-align: middle;
+	width: 20%
+}
+
+div#related_products div.related_item div.item_controls a {
+	display: inline-block;
+	vertical-align: middle;
+	padding-left: 5px;
+	padding-right: 5px;
+	font-size: 1.5em;
 }
