--- a/site/templates/home.xml
+++ b/site/templates/home.xml
@@ -19,6 +19,7 @@
 				<cms:module
 					name="shop"
 					action="show_item_list"
+					category="packages"
 					template="parts/package_slider.xml"
 					/>
 
